--- a/features/SignUp/ui/SignUp.module.scss
+++ b/features/SignUp/ui/SignUp.module.scss
@@ -1,9 +1,31 @@
 @import '@rambo-react/ui-meteors/dist/typography';
 
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
 .header {
   @include H1;
 
   text-align: center;
+}
+
+.inputs {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.icons {
+  display: flex;
+  gap: 60px;
+  justify-content: center;
+
+  svg {
+    cursor: pointer;
+  }
 }
 
 .agreement {
@@ -18,17 +40,23 @@
   }
 }
 
+.submitButton {
+  margin-bottom: 6px;
+}
+
 .question {
   @include Regular_text_16;
 
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-  align-items: center;
+  text-align: center;
 }
 
 .signIn {
   @include H3;
+
+  display: flex;
+  justify-content: center;
+
+  margin-bottom: 6px;
 
   color: var(--color-accent-500);
   text-decoration: none;
