--- a/features/SignUp/ui/SignUp.module.scss
+++ b/features/SignUp/ui/SignUp.module.scss
@@ -31,12 +31,35 @@
 .agreement {
   @include Small_text;
 
+  position: relative;
   display: flex;
   align-items: center;
 
   span,
   a {
     margin-right: 4px;
+  }
+}
+
+.checkboxErrorMessage {
+  @include Small_text;
+
+  position: absolute;
+  bottom: -10px;
+  left: 8px;
+
+  color: var(--color-danger-500);
+
+  visibility: hidden;
+  opacity: 0;
+
+  transition:
+    visibility 0.3s ease,
+    opacity 0.3s ease;
+
+  &.show {
+    visibility: visible;
+    opacity: 1;
   }
 }
 
