--- a/app/auth/sign-in/page.module.scss
+++ b/app/auth/sign-in/page.module.scss
@@ -22,19 +22,7 @@
   @include H1;
 }
 
-.emailInput {
-  label {
-    @include Regular_text_16;
-
-    color: var(--color-light-900);
-  }
-
-  input {
-    background-color: transparent;
-  }
-}
-
-.passwordInput {
+.InputContainer {
   margin-top: 24px;
 
   label {
@@ -49,18 +37,31 @@
 }
 
 .forgotPass {
+  display: flex;
+  justify-content: flex-end;
+
+  margin: 36px 0 24px;
+
+  color: var(--color-light-900);
   text-decoration: none;
 
-  p {
-    margin: 36px 0 24px;
+  &:visited {
     color: var(--color-light-900);
-    text-align: end;
-
-    @include Regular_text_14;
   }
+
+  @include Regular_text_14;
 }
 
 .footer {
   margin: 18px 0 6px;
   text-align: center;
+}
+
+.emailInput,
+.passwordInput {
+  p {
+    width: 100%;
+    max-width: 326px;
+    word-break: break-all;
+  }
 }
