PROJ_41 feat: add modal

--- a/app/auth/forgot-password/ForgotPassword.module.scss
+++ b/app/auth/forgot-password/ForgotPassword.module.scss
@@ -34,3 +34,26 @@
     color: var(--color-light-100);
   }
 }
+
+.textModal {
+  width: 100%;
+  max-width: 330px;
+  margin-bottom: 18px;
+  color: var(--color-light-100);
+
+  @include Regular_text_16;
+}
+
+.btnWrapper {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.btnModal {
+  width: 96px;
+  height: 36px;
+
+  @include H3;
+
+  color: var(--color-light-100);
+}
