PROJ_41 refactor: refactor structure folders

--- a/features/ForgotPassword/ForgotPassword.module.scss
+++ b/features/ForgotPassword/ForgotPassword.module.scss
@@ -1,4 +1,4 @@
-@import '@rambo-react/ui-meteors/dist/typography';
+@import '../../node_modules/@rambo-react/ui-meteors/dist/typography';
 
 .title {
   @include H1;
