PROJ_41 feat: add styles recaptcha

--- a/features/ForgotPassword/ForgotPassword.module.scss
+++ b/features/ForgotPassword/ForgotPassword.module.scss
@@ -57,3 +57,10 @@
 
   color: var(--color-light-100);
 }
+
+.reCaptcha {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
