PROJ_41 feat: add styles

--- a/features/ForgotPassword/ForgotPassword.module.scss
+++ b/features/ForgotPassword/ForgotPassword.module.scss
@@ -1,5 +1,11 @@
 @import '../../node_modules/@rambo-react/ui-meteors/dist/typography';
 
+.cardWrapper {
+  display: flex;
+  justify-content: center;
+  padding-top: 72px;
+}
+
 .title {
   @include H1;
 
