--- a/features/ForgotPassword/ui/ForgotPassword.module.scss
+++ b/features/ForgotPassword/ui/ForgotPassword.module.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/@rambo-react/ui-meteors/dist/typography';
+@import '../../../node_modules/@rambo-react/ui-meteors/dist/typography';
 
 .cardWrapper {
   display: flex;
