PROJ_41 feat: add handleSubmitReCaptchaForm function for handling reCAPTCHA form submission

--- a/features/ForgotPassword/ui/ForgotPassword.module.scss
+++ b/features/ForgotPassword/ui/ForgotPassword.module.scss
@@ -21,6 +21,13 @@
   color: var(--color-light-900);
 }
 
+.textSuccess {
+  @include Regular_text_14;
+
+  margin: 23px 0 18px;
+  color: var(--color-light-100);
+}
+
 .signIn {
   @include H3;
 
@@ -39,6 +46,13 @@
   &:hover {
     color: var(--color-light-100);
   }
+}
+
+.reCaptcha {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .textModal {
@@ -62,11 +76,4 @@
   @include H3;
 
   color: var(--color-light-100);
-}
-
-.reCaptcha {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
 }
