--- a/features/new-password/ui/NewPasswordForm.module.scss
+++ b/features/new-password/ui/NewPasswordForm.module.scss
@@ -26,3 +26,21 @@
   margin-bottom: 41px;
   color: var(--color-light-900);
 }
+
+@media (width <= 360px) {
+  .card {
+    padding: 17px 15px 0;
+    background-color: transparent;
+    border: none;
+  }
+
+  .title {
+    @include typography.H2;
+
+    margin-bottom: 31px;
+  }
+
+  .helper {
+    margin-bottom: 53px;
+  }
+}
