PROJ-41_feat: add hooks useMobile and adaptive styles

--- a/features/ForgotPassword/ui/ForgotPassword/ui/FormForgotPassword/FormForgotPassword.module.scss
+++ b/features/ForgotPassword/ui/ForgotPassword/ui/FormForgotPassword/FormForgotPassword.module.scss
@@ -1,9 +1,8 @@
-@import '../../../node_modules/@rambo-react/ui-meteors/dist/typography';
+@import '../../../../../../node_modules/@rambo-react/ui-meteors/dist/typography';
 
-.cardWrapper {
+.formContainer {
   display: flex;
-  justify-content: center;
-  padding-top: 72px;
+  flex-direction: column;
 }
 
 .title {
@@ -53,4 +52,45 @@
   align-items: center;
   justify-content: center;
   width: 100%;
+}
+
+@media screen and (width <= 576px) {
+  .formContainer {
+    flex-direction: column;
+  }
+
+  .title {
+    @include H2;
+
+    order: 1;
+    margin-bottom: 31px;
+    padding: 0;
+  }
+
+  .text {
+    order: 2;
+    margin-bottom: 53px;
+  }
+
+  .textSuccess {
+    @include Regular_text_16;
+
+    margin-top: 107px;
+  }
+
+  .reCaptcha {
+    order: 3;
+    margin-bottom: 36px;
+  }
+
+  .btnForm {
+    order: 4;
+    height: 48px;
+    margin-bottom: 36px;
+  }
+
+  .signIn {
+    order: 5;
+    margin: 0;
+  }
 }
