--- a/features/SignUp/ui/SignUp.module.scss
+++ b/features/SignUp/ui/SignUp.module.scss
@@ -21,6 +21,18 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
+
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus {
+    box-shadow: 0 0 0 1000px var(--color-dark-500) inset;
+
+    -webkit-text-fill-color: var(--color-light-100);
+
+    @include respond-to-mobile {
+      box-shadow: 0 0 0 1000px var(--color-dark-700) inset;
+    }
+  }
 }
 
 .header {
