PROJ-41_fix: fix styles and refactor structure folders

--- a/features/ForgotPassword/ui/FormForgotPassword/FormForgotPassword.module.scss
+++ b/features/ForgotPassword/ui/FormForgotPassword/FormForgotPassword.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../node_modules/@rambo-react/ui-meteors/dist/typography';
+@use '@rambo-react/ui-meteors/dist/typography' as typography;
 
 .formContainer {
   display: flex;
@@ -6,7 +6,7 @@
 }
 
 .title {
-  @include H1;
+  @include typography.H1;
 
   margin-bottom: 37px;
   padding-top: 5px;
@@ -14,21 +14,21 @@
 }
 
 .text {
-  @include Regular_text_14;
+  @include typography.Regular_text_14;
 
   margin: 7px 0 17px;
   color: var(--color-light-900);
 }
 
 .textSuccess {
-  @include Regular_text_14;
+  @include typography.Regular_text_14;
 
   margin: 23px 0 18px;
   color: var(--color-light-100);
 }
 
 .signIn {
-  @include H3;
+  @include typography.H3;
 
   display: flex;
   justify-content: center;
@@ -55,12 +55,18 @@
 }
 
 @media screen and (width <= 576px) {
+  .card {
+    padding: 0;
+    background-color: transparent;
+    border: none;
+  }
+
   .formContainer {
     flex-direction: column;
   }
 
   .title {
-    @include H2;
+    @include typography.H2;
 
     order: 1;
     margin-bottom: 31px;
@@ -73,7 +79,7 @@
   }
 
   .textSuccess {
-    @include Regular_text_16;
+    @include typography.Regular_text_16;
 
     margin-top: 107px;
   }
