PROJ-41_refactor: refactor styles

--- a/features/ForgotPassword/ui/FormForgotPassword/FormForgotPassword.module.scss
+++ b/features/ForgotPassword/ui/FormForgotPassword/FormForgotPassword.module.scss
@@ -1,5 +1,9 @@
 @use '@rambo-react/ui-meteors/dist/typography' as typography;
 
+.card {
+  margin: 72px auto 0;
+}
+
 .formContainer {
   display: flex;
   flex-direction: column;
@@ -56,13 +60,13 @@
 
 @media screen and (width <= 576px) {
   .card {
-    padding: 0;
+    width: 100%;
+    max-width: 330px;
+    margin: 0 auto;
+    padding: 17px 0 0;
+
     background-color: transparent;
     border: none;
-  }
-
-  .formContainer {
-    flex-direction: column;
   }
 
   .title {
