--- a/app/auth/confirmed-email/ConfirmedEmail.module.scss
+++ b/app/auth/confirmed-email/ConfirmedEmail.module.scss
@@ -2,52 +2,66 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: var(--color-light-100);
+
   margin: 0 auto 84px;
-  @media (max-width: 425px) {
-    margin: 0px auto 112px;
-  }
+
+  color: var(--color-light-100);
+
   button {
     order: 1;
     width: 182px;
     height: 36px;
-    @media (max-width: 768px) {
+
+    @media (width <= 768px) {
       width: 330px;
       height: 48px;
     }
-    @media (max-width: 425px) {
+
+    @media (width <= 425px) {
       order: 2;
       width: 92vw;
     }
   }
+
+  @media (width <= 425px) {
+    margin: 0 auto 112px;
+  }
 }
+
 .btnLink {
   text-decoration: none;
 }
+
 .title {
+  margin-bottom: 20px;
+
   font-size: 20px;
   font-weight: 700;
   line-height: 36px;
-  margin-bottom: 20px;
   letter-spacing: 0;
-  @media (max-width: 425px) {
+
+  @media (width <= 425px) {
     margin-bottom: 13px;
   }
 }
+
 .description {
+  max-width: 294px;
+  margin-bottom: 54px;
   font-size: 16px;
   line-height: 24px;
-  margin-bottom: 54px;
-  max-width: 294px;
-  @media (max-width: 425px) {
+
+  @media (width <= 425px) {
     margin-bottom: 0;
   }
 }
+
 .img {
+  order: 2;
   max-width: 432px;
   margin-top: 72px;
-  order: 2;
-  @media (max-width: 425px) {
+
+  @media (width <= 425px) {
     order: 1;
     max-width: 320px;
     margin-top: 31px;
