--- a/features/ExpiredEmailLink/ui/ExpiredEmailLinkForm/ExpiredEmailLinkForm.module.scss
+++ b/features/ExpiredEmailLink/ui/ExpiredEmailLinkForm/ExpiredEmailLinkForm.module.scss
@@ -1,23 +1,32 @@
-@use '@rambo-react/ui-meteors/dist/typography' as typography;
+@use '../../../../node_modules/@rambo-react/ui-meteors/dist/typography' as typography;
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+
+  margin: 0 auto 45px;
+
   color: var(--color-light-100);
-  margin: 35px auto 45px;
 }
+
 .title {
   @include typography.H1;
+
   margin-bottom: 20px;
 }
+
 .description {
   @include typography.Regular_text_16;
-  text-align: center;
-  margin-bottom: 30px;
+
   max-width: 294px;
+  margin-bottom: 30px;
+  text-align: center;
 }
+
 .btnResendLink {
   @include typography.H3;
+
   margin: 24px auto 36px;
 }
