PROJ-48 refactor: change structure of the project

--- a/features/ExpiredEmailLink/ui/ExpiredEmailLinkForm/ExpiredEmailLinkForm.module.scss
+++ b/features/ExpiredEmailLink/ui/ExpiredEmailLinkForm/ExpiredEmailLinkForm.module.scss
@@ -1,4 +1,4 @@
-@use '../../../../node_modules/@rambo-react/ui-meteors/dist/typography' as typography;
+@use '@rambo-react/ui-meteors/dist/typography' as typography;
 
 .container {
   display: flex;
