PROJ-48 feat: add error handling from the server

--- a/shared/ui/ExpiredEmailLinkForm/ExpiredEmailLinkForm.module.scss
+++ b/shared/ui/ExpiredEmailLinkForm/ExpiredEmailLinkForm.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: flex-start;
 
+  max-width: 294px;
   margin: 0 auto 45px;
 
   color: var(--color-light-100);
