--- a/features/forgotPassword/ui/formForgotPassword/FormForgotPassword.module.scss
+++ b/features/forgotPassword/ui/formForgotPassword/FormForgotPassword.module.scss
@@ -1,10 +1,5 @@
 @use '@rambo-react/ui-meteors/dist/typography' as typography;
 
-.formContainer {
-  display: flex;
-  flex-direction: column;
-}
-
 .title {
   @include typography.H1;
 
@@ -54,7 +49,7 @@
   width: 100%;
 }
 
-@media screen and (width <= 576px) {
+@media screen and (width <= 480px) {
   .card {
     width: 100%;
     max-width: 330px;
@@ -62,6 +57,11 @@
 
     background-color: transparent;
     border: none;
+  }
+
+  .formContainer {
+    display: flex;
+    flex-direction: column;
   }
 
   .title {
@@ -72,30 +72,35 @@
     padding: 0;
   }
 
-  .text {
+  .inputContainer {
     order: 2;
+  }
+
+  .text {
+    order: 3;
     margin-bottom: 53px;
   }
 
   .textSuccess {
     @include typography.Regular_text_16;
 
-    margin-top: 107px;
+    order: 4;
+    margin-top: 54px;
   }
 
   .reCaptcha {
-    order: 3;
+    order: 5;
     margin-bottom: 36px;
   }
 
   .btnForm {
-    order: 4;
+    order: 6;
     height: 48px;
     margin-bottom: 36px;
   }
 
   .signIn {
-    order: 5;
+    order: 7;
     margin: 0;
   }
 }
