--- a/shared/ui/ExpiredEmailLinkForm/ExpiredEmailLinkForm.module.scss
+++ b/shared/ui/ExpiredEmailLinkForm/ExpiredEmailLinkForm.module.scss
@@ -6,10 +6,13 @@
   align-items: center;
   justify-content: flex-start;
 
-  max-width: 294px;
   margin: 0 auto 45px;
 
   color: var(--color-light-100);
+}
+
+.input {
+  max-width: 229px;
 }
 
 .title {
