PROJ-42/sign-in refactor: change styles name

--- a/features/SignIn/ui/SignIn.module.scss
+++ b/features/SignIn/ui/SignIn.module.scss
@@ -66,10 +66,10 @@
   }
 }
 
-.form__icon {
+.formIcon {
   cursor: pointer;
 }
 
-.signUp_button > a {
+.signUpButton > a {
   text-decoration: none;
 }
