refactorProject feat: add padding to text

--- a/shared/ui/TermsPageTemplate/TermsPageTemplate.module.scss
+++ b/shared/ui/TermsPageTemplate/TermsPageTemplate.module.scss
@@ -63,6 +63,7 @@
 .text {
   max-width: 958px;
   margin: 0 auto 227px;
+  padding: 0 15px;
   text-align: center;
 
   @include typography.Regular_text_14;
