--- a/features/confirmedEmail/ui/ConfirmedEmail.module.scss
+++ b/features/confirmedEmail/ui/ConfirmedEmail.module.scss
@@ -4,66 +4,53 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  margin: 0 auto 84px;
-
   color: var(--color-light-100);
-
-  button {
-    order: 1;
-    width: 182px;
-    height: 36px;
-
-    @media (width <= 768px) {
-      width: 330px;
-      height: 48px;
-    }
-
-    @media (width <= 425px) {
-      order: 2;
-      width: 92vw;
-    }
-  }
-
-  @media (width <= 425px) {
-    margin: 0 auto 112px;
-  }
-}
-
-.btnLink {
-  text-decoration: none;
 }
 
 .title {
-  margin-bottom: 20px;
+  margin-bottom: 19px;
 
   @include typography.H1;
 
-  @media (width <= 425px) {
+  @media (width <= 360px) {
+    @include typography.H2;
+
     margin-bottom: 13px;
   }
 }
 
 .description {
-  max-width: 294px;
   margin-bottom: 54px;
 
   @include typography.Regular_text_16;
 
-  @media (width <= 425px) {
-    margin-bottom: 0;
+  @media (width <= 360px) {
+    margin-bottom: 20px;
+  }
+}
+
+.btnLink {
+  margin-bottom: 72px;
+  text-decoration: none;
+
+  button {
+    width: 182px;
+    height: 36px;
+
+    @media (width <= 360px) {
+      width: 100%;
+      height: 48px;
+    }
+  }
+
+  @media (width <= 360px) {
+    order: 1;
+    width: 100%;
+    margin: 0;
   }
 }
 
 .img {
-  order: 2;
   width: 100%;
   max-width: 432px;
-  margin-top: 72px;
-
-  @media (width <= 425px) {
-    order: 1;
-    max-width: 320px;
-    margin-top: 31px;
-  }
 }
