PROJ-40 refactor: add formContainer to the component

--- a/features/newPassword/ui/NewPasswordForm.module.scss
+++ b/features/newPassword/ui/NewPasswordForm.module.scss
@@ -1,22 +1,12 @@
 @use '@rambo-react/ui-meteors/dist/typography' as typography;
 
 .form {
-  min-width: 330px;
+  margin-top: 37px;
+  margin-bottom: 12px;
 
   .margin {
     margin-bottom: 24px;
   }
-
-  .button {
-    margin-bottom: 18px;
-  }
-}
-
-.title {
-  margin-bottom: 37px;
-  text-align: center;
-
-  @include typography.H1;
 }
 
 .helper {
@@ -28,19 +18,11 @@
 }
 
 @media (width <= 360px) {
-  .card {
-    padding: 17px 15px 0;
-    background-color: transparent;
-    border: none;
-  }
-
-  .title {
-    @include typography.H2;
-
-    margin-bottom: 31px;
-  }
-
   .helper {
     margin-bottom: 53px;
+  }
+
+  .form {
+    margin-top: 31px; 
   }
 }
