--- a/features/forgotPassword/ui/ForgotPasswordForm/ForgotPasswordForm.module.scss
+++ b/features/forgotPassword/ui/ForgotPasswordForm/ForgotPasswordForm.module.scss
@@ -1,11 +1,7 @@
 @use '@rambo-react/ui-meteors/dist/typography' as typography;
 
-.title {
-  @include typography.H1;
-
-  margin-bottom: 37px;
-  padding-top: 5px;
-  text-align: center;
+.form {
+  margin-top: 37px;
 }
 
 .text {
@@ -22,62 +18,54 @@
   color: var(--color-light-100);
 }
 
-.signIn {
-  @include typography.H3;
-
-  display: flex;
-  justify-content: center;
-
-  margin: 30px 0;
-
-  color: var(--color-accent-500);
+.linkSignIn {
   text-decoration: none;
+}
 
-  &:visited {
-    color: var(--color-accent-500);
-  }
+.btnForm {
+  margin-bottom: 24px;
+}
 
-  &:hover {
-    color: var(--color-light-100);
-  }
+.btnSignIn {
+  margin-bottom: 12px;
 }
 
 .reCaptcha {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  margin-top: 24px;
 }
 
-@media screen and (width <= 480px) {
-  .card {
-    width: 100%;
-    max-width: 330px;
-    padding: 17px 0 0;
-
-    background-color: transparent;
-    border: none;
-  }
-
-  .formContainer {
+@media (width <= 425px) {
+  .form {
     display: flex;
     flex-direction: column;
+    margin-top: 31px;
   }
 
-  .title {
-    @include typography.H2;
+  .btnForm,
+  .btnSignIn {
+    height: 48px;
+  }
 
-    order: 1;
-    margin-bottom: 31px;
-    padding: 0;
+  .reCaptcha {
+    order: 4;
+    width: 100%;
+    margin-top: 0;
+    margin-bottom: 36px;
+
+    & > *:first-child {
+      width: 100%;
+    }
   }
 
   .inputContainer {
-    order: 2;
+    order: 1;
   }
 
   .text {
-    order: 3;
+    order: 2;
     margin-bottom: 53px;
   }
 
@@ -88,19 +76,11 @@
     margin-top: 54px;
   }
 
-  .reCaptcha {
-    order: 5;
-    margin-bottom: 36px;
-  }
-
   .btnForm {
-    order: 6;
-    height: 48px;
-    margin-bottom: 36px;
+    order: 5;
   }
 
-  .signIn {
-    order: 7;
-    margin: 0;
+  .linkSignIn {
+    order: 6;
   }
 }
