PROJ-40 fix: fix styles for signIn

--- a/features/signIn/ui/SignIn.module.scss
+++ b/features/signIn/ui/SignIn.module.scss
@@ -9,8 +9,10 @@
   margin: 13px 0 24px;
 }
 
-.inputContainer {
-  margin-top: 24px;
+.form {
+  .margin {
+    margin-bottom: 24px;
+  }
 }
 
 .link {
