--- a/features/signUp/ui/SignUp.module.scss
+++ b/features/signUp/ui/SignUp.module.scss
@@ -1,26 +1,14 @@
 @use '@rambo-react/ui-meteors/dist/typography' as typography;
 
 @mixin respond-to-mobile {
-  @media (width <= 360px) {
+  @media (width <= 425px) {
     @content;
-  }
-}
-
-.card {
-  @include respond-to-mobile {
-    width: 100%;
-    max-width: 378px;
-    padding: 17px 15px 28px;
-
-    background-color: unset;
-    border: unset;
   }
 }
 
 .form {
   display: flex;
   flex-direction: column;
-  gap: 12px;
 
   input:-webkit-autofill,
   input:-webkit-autofill:hover,
@@ -35,30 +23,18 @@
   }
 }
 
-.header {
-  @include typography.H1;
-
-  text-align: center;
-
-  @include respond-to-mobile {
-    @include typography.H2;
-
-    margin-bottom: 8px;
-  }
-}
-
 .icons {
   display: flex;
   gap: 60px;
   justify-content: center;
-  margin-bottom: 24px;
+  margin: 13px 0 24px;
 
   svg {
     cursor: pointer;
   }
 
   @include respond-to-mobile {
-    margin-bottom: 12px;
+    margin: 19px 0 12px;
   }
 }
 
@@ -72,6 +48,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  margin: 12px 0;
 
   &Text {
     span,
@@ -82,6 +59,10 @@
     a {
       color: var(--color-accent-300);
     }
+  }
+
+  @include respond-to-mobile {
+    margin: 12px 0 24px;
   }
 }
 
@@ -94,9 +75,7 @@
   color: var(--color-danger-500);
 }
 
-.submitButton {
-  margin-bottom: 6px;
-
+.button {
   @include respond-to-mobile {
     height: 48px;
   }
@@ -105,25 +84,14 @@
 .question {
   @include typography.Regular_text_16;
 
+  margin: 18px 0 6px;
   text-align: center;
 
   @include respond-to-mobile {
-    @include typography.Regular_text_14;
+    margin: 19px 0 5px;
   }
 }
 
 .signIn {
-  @include typography.H3;
-
-  display: flex;
-  justify-content: center;
-
-  margin-bottom: 6px;
-
-  color: var(--color-accent-500);
   text-decoration: none;
-
-  &:visited {
-    color: var(--color-accent-500);
-  }
 }
