--- a/features/signIn/ui/SignIn.module.scss
+++ b/features/signIn/ui/SignIn.module.scss
@@ -10,6 +10,9 @@
 }
 
 .form {
+  display: flex;
+  flex-direction: column;
+
   .margin {
     margin-bottom: 24px;
   }
@@ -20,10 +23,10 @@
 }
 
 .forgotPass {
-  display: flex;
-  justify-content: flex-end;
   margin: 36px 0 24px;
+  margin-left: auto;
   color: var(--color-light-900);
+  text-align: right;
 
   &:visited {
     color: var(--color-light-900);
