--- a/features/confirmedEmail/ui/ConfirmedEmail.module.scss
+++ b/features/confirmedEmail/ui/ConfirmedEmail.module.scss
@@ -4,29 +4,24 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  padding: 17px 15px 0;
+
   color: var(--color-light-100);
 }
 
 .title {
+  margin-top: 0;
   margin-bottom: 19px;
 
   @include typography.H1;
-
-  @media (width <= 360px) {
-    @include typography.H2;
-
-    margin-bottom: 13px;
-  }
 }
 
 .description {
+  margin-top: 0;
   margin-bottom: 54px;
 
   @include typography.Regular_text_16;
-
-  @media (width <= 360px) {
-    margin-bottom: 20px;
-  }
 }
 
 .btnLink {
@@ -35,22 +30,29 @@
 
   button {
     width: 182px;
-    height: 36px;
+  }
+}
 
-    @media (width <= 360px) {
+@media (width <= 425px) {
+  .title {
+    @include typography.H2;
+
+    margin-bottom: 13px;
+  }
+
+  .description {
+    margin-bottom: 66px;
+  }
+
+  .btnLink {
+    order: 1;
+    width: 100%;
+    margin-top: 46px;
+    margin-bottom: 0;
+
+    button {
       width: 100%;
       height: 48px;
     }
   }
-
-  @media (width <= 360px) {
-    order: 1;
-    width: 100%;
-    margin: 0;
-  }
-}
-
-.img {
-  width: 100%;
-  max-width: 432px;
 }
