--- a/shared/ui/Carousel/Carousel.module.scss
+++ b/shared/ui/Carousel/Carousel.module.scss
@@ -1,35 +1,38 @@
 .container {
-  height: 503px;
   width: 490px;
+  height: 503px;
 }
 
 .swiperButtonNextBlack,
 .swiperButtonPrevBlack,
 .swiperButtonNextGray,
 .swiperButtonPrevGray {
+  cursor: pointer;
+
   position: absolute;
+  z-index: 10;
   top: 50%;
   transform: translateY(-50%);
-  border-radius: 2px;
+
   display: flex;
   align-items: center;
   justify-content: center;
-  cursor: pointer;
-  z-index: 10;
+
+  border-radius: 2px;
 }
 
 .swiperButtonNextBlack,
 .swiperButtonPrevBlack {
-  background-color: rgba(23, 23, 23, 0.8);
   width: 36px;
   height: 36px;
+  background-color: rgb(23 23 23 / 80%);
 }
 
 .swiperButtonNextGray,
 .swiperButtonPrevGray {
-  background-color: rgba(51, 51, 51, 0.6);
   width: 48px;
   height: 48px;
+  background-color: rgb(51 51 51 / 60%);
 }
 
 .swiperButtonNextBlack,
@@ -43,40 +46,45 @@
 }
 
 .hiddenButton {
-  visibility: hidden;
   pointer-events: none;
+  visibility: hidden;
 }
 
 .swiperPaginationBlack {
   position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 6px;
   z-index: 2;
+
+  display: flex;
+  gap: 6px;
+  align-items: center;
+  justify-content: center;
 }
+
 .swiperPaginationGray {
   position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 12px;
   z-index: 2;
-  height: 24px;
   left: 50% !important;
+
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  justify-content: center;
+
   width: auto !important;
   min-width: 20px !important;
-  background-color: rgba(51, 51, 51, 0.6);
-  border-radius: 2px;
+  height: 24px;
   padding: 8px;
+
+  background-color: rgb(51 51 51 / 60%);
+  border-radius: 2px;
 }
 
 .swiperPaginationGray :global(.swiper-pagination-button),
 .swiperPaginationBlack :global(.swiper-pagination-button) {
+  cursor: pointer;
   width: 8px;
   height: 8px;
   border-radius: 50%;
-  cursor: pointer;
 }
 
 .swiperPaginationGray :global(.swiper-pagination-button) {
